package org.javapro.entities;

public enum QuestionType {
    DATE,
    MULTIPLE_OPTION,
    OPEN
}
